--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 INSTAGRAM_CLIENT_ID=1151185512971178
 INSTAGRAM_CLIENT_SECRET=34bcfa01bd793d802de94398e951499e
-INSTAGRAM_REDIRECT_URI=https://hyperbeam-steel.vercel.app/instagram-redirect
+INSTAGRAM_REDIRECT_URI=https://ad-server-creator.vercel.app/creator
